--- a/FåKnappenTilÅGjøreNoe/index.html
+++ b/FåKnappenTilÅGjøreNoe/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-
+<!-- Oppgave: 
+Lag en funksjon som gjør at når du trykker på knappen, så skal den endre / legge til tekst i div-en!  -->
     <div id="app"></div>
 
 
