--- a/Lyspære/index.html
+++ b/Lyspære/index.html
@@ -14,6 +14,13 @@
 </head>
 
 <body>
+    <!-- Oppgave: Lyspære
+        Lag et div-element som starter med bakgrunnsfargen grå.
+        Når man trykker på lysbryteren så skrur lyspæren seg på (og fargen endrer seg til gul).
+        Legg gjerne også ved en tekst som sier noe om lyspæren er på eller av.
+        Oppgaven kan løses med onclick, variabler, if/else (ternary). 
+    -->
+
     <div id="app"></div>
 
 
