--- a/VisuellTeller/index.html
+++ b/VisuellTeller/index.html
@@ -8,7 +8,12 @@
 </head>
 
 <body>
+<!-- Oppgave - Lag en visuell teller!
+Vis frem et tall
 
+- lag to knapper der en kan øke tallet hver gang du trykker på den, mens den andre gjør tallet mindre
+
+Bruk minst en variabel for å løse oppgaven ;) -->
     <div id="app"></div>
 
 
