--- a/FormaterStringen/index.html
+++ b/FormaterStringen/index.html
@@ -8,6 +8,10 @@
 </head>
 
 <body>
+<!-- I denne oppgaven skal du ta lage en funksjon som tar inn en string som parameter. 
+Hvis stringen begynner med en bokstav skal denne gjøres om til uppercase, 
+slik at om du sender inn "terje" blir det gjort om til "Terje". -->
+
     <div id="app"></div>
 
 
